# dj_synth_pad_siva

./: CMakeLists.txt  README.md
.github/workflows/: static.yml
ngp37_ss4362/: index.html
src/: CMakeLists.txt  backing_drums1.c  backing_jazzy.c  backing_mellow.c  backing_rock.c  clap.c  constant.h  convertWav.py  dj.c  hightom.c  hihat.c  karplus_strong.c  karplus_strong.h  kick.c  lowtom.c  shared.h  snare.c  vga16_graphics.c
